general style updated

--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -6,11 +6,11 @@ Parameters:
     Type: AWS::EC2::VPC::Id
 
   EDLUsername:
-    Description: Earthdata Login username to use when downloading products.
+    Description: Earthdata Login username to use when downloading input products.
     Type: String
 
   EDLPassword:
-    Description: Earthdata Login password to use when downloading products.
+    Description: Earthdata Login password to use when downloading input products.
     Type: String
     NoEcho: true
 
