--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -18,7 +18,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8  flake8-import-order flake8-blind-except flake8-builtins
 
-      - run: flake8 --max-line-length=120 --import-order-style=pycharm --statistics
+      - run: flake8 --max-line-length=120 --import-order-style=pycharm --statistics --application-import-names hyp3_api
 
   cfn-lint:
     runs-on: ubuntu-latest
