--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
 
       - run: |
           python -m pip install --upgrade pip
-          pip install -r api/requirements.txt
+          pip install -r api/requirements-test.txt
 
       - env:
           AWS_DEFAULT_REGION: us-west-2
