--- a/api/tests/cfg.env
+++ b/api/tests/cfg.env
@@ -7,3 +7,4 @@ AWS_ACCESS_KEY_ID=testing
 AWS_SECRET_ACCESS_KEY=testing
 AWS_SECURITY_TOKEN=testing
 AWS_SESSION_TOKEN=testing
+SYSTEM_AVAILABLE=true
