--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,13 +52,15 @@ jobs:
         with:
           python-version: 3.8
 
-      - working-directory: api
+      - name: install dependancies
+        working-directory: api
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt -t src
           pip install bump2version
 
-      - run: |
+      - name: Package and deploy
+        run: |
           aws cloudformation package \
             --template-file cloudformation.yml \
             --s3-bucket ${TEMPLATE_BUCKET} \
