--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ env:
   RTC_GAMMA_REPOSITORY: 626226570674.dkr.ecr.us-east-1.amazonaws.com/hyp3-rtc-gamma
 
   VPC_ID: ${{ secrets.VPC_ID }}
+  SUBNET_IDS: ${{ secrets.SUBNET_IDS }}
   EDL_USERNAME: ${{ secrets.EDL_USERNAME }}
   EDL_PASSWORD: ${{ secrets.EDL_PASSWORD }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -71,12 +72,13 @@ jobs:
             --role-arn ${CLOUDFORMATION_ROLE_ARN} \
             --capabilities CAPABILITY_IAM \
             --parameter-overrides \
-                "VpcId=${VPC_ID}" \
-                "EDLUsername=${EDL_USERNAME}" \
-                "EDLPassword=${EDL_PASSWORD}" \
-                "RtcGammaImage=${RTC_GAMMA_REPOSITORY}:${IMAGE_TAG}" \
-                "DomainName=${DOMAIN_NAME}" \
-                "CertificateArn=${CERTIFICATE_ARN}"
+                VpcId="${VPC_ID}" \
+                SubnetIds="${SUBNET_IDS}" \
+                EDLUsername="${EDL_USERNAME}" \
+                EDLPassword="${EDL_PASSWORD}" \
+                RtcGammaImage="${RTC_GAMMA_REPOSITORY}:${IMAGE_TAG}" \
+                DomainName="${DOMAIN_NAME}" \
+                CertificateArn="${CERTIFICATE_ARN}"
 
       - name: Get associated PR
         if: github.ref == 'refs/heads/master'
