Add retry to other steps that deal with external services

--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -31,6 +31,11 @@ Resources:
                 "job_id.$": "$.job_id",
                 "status_code": "RUNNING"
               },
+              "Retry": [{
+                "ErrorEquals": [ "States.ALL" ],
+                  "IntervalSeconds": 1,
+                  "MaxAttempts": 2
+              }],
               "ResultPath": "$.results.job_running",
               "Next": "ADD_PREFIX_TO_JOB_PARAMETERS"
             },
@@ -68,6 +73,11 @@ Resources:
                "Parameters": {
                  "job_id.$": "$.job_id"
                },
+              "Retry": [{
+                "ErrorEquals": [ "States.ALL" ],
+                  "IntervalSeconds": 1,
+                  "MaxAttempts": 2
+              }],
                "ResultPath": "$.results.get_files",
                "Next": "JOB_SUCCEEDED"
              },
@@ -82,6 +92,11 @@ Resources:
                 "thumbnail_images.$": "$.results.get_files.thumbnail_images",
                 "expiration_time.$": "$.results.get_files.expiration_time"
               },
+              "Retry": [{
+                "ErrorEquals": [ "States.ALL" ],
+                  "IntervalSeconds": 1,
+                  "MaxAttempts": 2
+              }],
               "ResultPath": "$.results.job_succeeded",
               "End": true
             },
@@ -92,6 +107,11 @@ Resources:
                 "job_id.$": "$.job_id",
                 "status_code": "FAILED"
               },
+              "Retry": [{
+                "ErrorEquals": [ "States.ALL" ],
+                  "IntervalSeconds": 1,
+                  "MaxAttempts": 2
+              }],
               "ResultPath": "$.results.job_failed",
               "Next": "FAIL"
             },
