--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -51,6 +51,14 @@ Parameters:
     MinValue: 1
     Default: 25
 
+  SystemAvailable:
+    Description: Set to false to shutdown system, API will run and provide errors to users, but will not accept jobs.
+    Type: String
+    Default: true
+    AllowedValues:
+      - false
+      - true
+
 Outputs:
 
   ApiUrl:
@@ -68,6 +76,7 @@ Resources:
         DomainName: !Ref DomainName
         CertificateArn: !Ref CertificateArn
         MonthlyJobQuotaPerUser: !Ref MonthlyJobQuotaPerUser
+        SystemAvailable: !Ref SystemAvailable
       TemplateURL: api/cloudformation.yml
 
   Cluster:
