specify #Latest launch template version

--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -56,8 +56,6 @@ Resources:
             cloud-init-per instance mkfs_ssd mkfs.ext4 /dev/nvme1n1
             cloud-init-per instance mount_ssd mount /dev/nvme1n1 /var/lib/docker
 
-            --==BOUNDARY==
-
   ComputeEnvironment:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
@@ -77,6 +75,7 @@ Resources:
           - !Ref SecurityGroup
         LaunchTemplate:
           LaunchTemplateId: !Ref LaunchTemplate
+          Version: $Latest
         Tags:
           Name: !Ref AWS::StackName
 
