add closing boundary to user data

--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -56,6 +56,8 @@ Resources:
             cloud-init-per instance mkfs_ssd mkfs.ext4 /dev/nvme1n1
             cloud-init-per instance mount_ssd mount /dev/nvme1n1 /var/lib/docker
 
+            --==BOUNDARY==--
+
   ComputeEnvironment:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
