use monkeypatch for testing env vars, move unavailable test

--- a/api/tests/cfg.env
+++ b/api/tests/cfg.env
@@ -1,8 +1,8 @@
 STEP_FUNCTION_ARN=arn:aws:states:us-west-2:1234:stateMachine:hyp3-step-function
 TABLE_NAME=hyp3-db-table
-MONTHLY_JOB_QUOTA_PER_USER=25
-AUTH_PUBLIC_KEY=123456789
-AUTH_ALGORITHM=HS256
+MONTHLY_JOB_QUOTA_PER_USER=123123123132
+AUTH_PUBLIC_KEY=4321
+AUTH_ALGORITHM=asdfasd
 AWS_ACCESS_KEY_ID=testing
 AWS_SECRET_ACCESS_KEY=testing
 AWS_SECURITY_TOKEN=testing
