--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -125,6 +125,9 @@ Resources:
       LifecycleConfiguration:
         Rules:
           - Status: Enabled
+            TagFilters:
+              - Key: file_type
+                Value: product
             ExpirationInDays: !Ref ProductLifetimeInDays
           - Status: Enabled
             AbortIncompleteMultipartUpload:
