Add GetObjectTagging to get-files role

--- a/step-function/get-files/cloudformation.yml
+++ b/step-function/get-files/cloudformation.yml
@@ -41,6 +41,9 @@ Resources:
               - Effect: Allow
                 Action: s3:ListBucket
                 Resource: !Sub "arn:aws:s3:::${Bucket}"
+              - Effect: Allow
+                Action: s3:GetObjectTagging
+                Resource: !Sub "arn:aws:s3:::${Bucket}/*"
 
   Lambda:
     Type: AWS::Lambda::Function
