--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -75,6 +75,11 @@ Resources:
                 "ErrorEquals": [ "States.ALL" ],
                 "MaxAttempts": 2
               }],
+              "Catch": [{
+                "ErrorEquals": ["States.ALL"],
+                "Next": "JOB_FAILED",
+                "ResultPath": "$.results.get_files"
+              }],
                "ResultPath": "$.results.get_files",
                "Next": "JOB_SUCCEEDED"
              },
