--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
 
       - run: |
           python -m pip install --upgrade pip
-          pip install -r api/requirements-test.txt
+          pip install -r requirements-test.txt
 
       - name: pytest api
         env:
