update step function to support INSAR GAMMA job type

--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -36,6 +36,9 @@ Outputs:
   RtcGammaJobDefinition:
     Value: !Ref RtcGammaJobDefinition
 
+  InsarGammaJobDefinition:
+    Value: !Ref InsarGammaJobDefinition
+
 Resources:
 
   SecurityGroup:
