--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -102,7 +102,7 @@ Resources:
       Parameters:
         JobQueueArn: !GetAtt Cluster.Outputs.JobQueueArn
         RtcGammaJobDefinition: !GetAtt Cluster.Outputs.RtcGammaJobDefinition
-        InsarGammaJobDefinition: !GetAtt Cluster.Outputs.RtcGammaJobDefinition
+        InsarGammaJobDefinition: !GetAtt Cluster.Outputs.InsarGammaJobDefinition
         JobsTable: !Ref JobsTable
         Bucket: !Ref ContentBucket
       TemplateURL: step-function/cloudformation.yml
