Revert "try without explicit ruby version"
This reverts commit 702025002c431939fcd87ae42601a3b6d82c5fc7.

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -51,5 +51,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7
       - run: gem install statelint
       - run: statelint step-function/step-function.json
