--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -49,6 +49,6 @@ jobs:
 
       - run: |
           python -m pip install --upgrade pip
-          pip install openapi-spec-validator
+          pip install prance
 
-      - run: openapi-spec-validator api/src/hyp3_api/openapi-spec.yml
+      - run: prance validate --backend=openapi-spec-validator api/src/hyp3_api/openapi-spec.yml
