--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -49,6 +49,6 @@ jobs:
 
       - run: |
           python -m pip install --upgrade pip
-          pip install prance
+          pip install prance openapi-spec-validator
 
       - run: prance validate --backend=openapi-spec-validator api/src/hyp3_api/openapi-spec.yml
