--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -48,10 +48,8 @@ jobs:
           python-version: 3.8
 
       - run: |
-          apt update
-          apt install libicu-dev
           python -m pip install --upgrade pip
-          python -m pip install openapi-spec-validator
+          python -m pip install openapi-spec-validator click
           python -m pip install prance
 
-      - run: prance validate --backend=openapi-spec-validator api/src/hyp3_api/openapi-spec.yml
+      - run: prance validate --backend=openapi-spec-validator api/src/hyp3_api/api-spec/openapi-spec.yml
