--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -42,8 +42,7 @@ jobs:
 
       - run: |
           python -m pip install --upgrade pip
-          python -m pip install openapi-spec-validator click
-          python -m pip install prance
+          python -m pip install openapi-spec-validator click prance
 
       - run: prance validate --backend=openapi-spec-validator api/src/hyp3_api/api-spec/openapi-spec.yml
 
