--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ env:
   TEMPLATE_BUCKET: cf-templates-aubvn3i9olmk-us-west-2
   RTC_GAMMA_REPOSITORY: 626226570674.dkr.ecr.us-east-1.amazonaws.com/hyp3-rtc-gamma
   INSAR_GAMMA_REPOSITORY: 626226570674.dkr.ecr.us-east-1.amazonaws.com/hyp3-insar-gamma
+  AUTORIFT_REPOSITORY: 626226570674.dkr.ecr.us-east-1.amazonaws.com/hyp3-autorift
 
   VPC_ID: ${{ secrets.VPC_ID }}
   SUBNET_IDS: ${{ secrets.SUBNET_IDS }}
@@ -79,6 +80,7 @@ jobs:
                 EDLPassword="${EDL_PASSWORD}" \
                 RtcGammaImage="${RTC_GAMMA_REPOSITORY}:${IMAGE_TAG}" \
                 InsarGammaImage="${INSAR_GAMMA_REPOSITORY}:${IMAGE_TAG}" \
+                AutoriftImage="${AUTORIFT_REPOSITORY}:${IMAGE_TAG}" \
                 DomainName="${DOMAIN_NAME}" \
                 CertificateArn="${CERTIFICATE_ARN}"
 
