revise autorift_job_parameters description

--- a/api/src/hyp3_api/api-spec/job_parameters.yml
+++ b/api/src/hyp3_api/api-spec/job_parameters.yml
@@ -23,7 +23,7 @@ components:
           $ref: "#/components/schemas/los_displacement"
 
     autorift_job_parameters:
-      description: Options and parameters for running the job process.
+      description: Parameters for running an AUTORIFT job
       type: object
       required:
         - granules
