grant step function permission to launch autorift job definition

--- a/step-function/cloudformation.yml
+++ b/step-function/cloudformation.yml
@@ -61,6 +61,7 @@ Resources:
                   - !Ref JobQueueArn
                   - !Ref RtcGammaJobDefinition
                   - !Ref InsarGammaJobDefinition
+                  - !Ref AutoriftJobDefinition
               - Effect: Allow
                 Action:
                   - events:PutTargets
