remove *cf.yml from cfn-lint call now that all templates live under apps/

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -28,7 +28,7 @@ jobs:
 
       - uses: scottbrenner/cfn-lint-action@master
         with:
-          args: "--ignore-checks W3002 --template *cf.yml **/*cf.yml"
+          args: "--ignore-checks W3002 --template **/*cf.yml"
 
   openapi-spec-validator:
     runs-on: ubuntu-latest
