--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ name: Run tests
 on: push
 
 jobs:
-  test-api:
+  pytest:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +17,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-all.txt
 
-      - name: pytest apps
+      - name: run pytest
         env:
           PYTHONPATH: apps/api/src:apps/get-files/src:apps/start-execution/src
         run: |
